YI-227: spacing consistency fix

--- a/web/themes/custom/yale_infosec/components/03-organisms/mss-calc/_mss-calc.scss
+++ b/web/themes/custom/yale_infosec/components/03-organisms/mss-calc/_mss-calc.scss
@@ -9,7 +9,7 @@
   grid-area: content;
 
   .form-fieldset:first-child {
-    margin-top: $space;
+    margin-top: 3rem;
   }
 
   .fieldgroup {
